laboratorio/practica03/Grammars.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 2.1.7 from Grammars.y
-----------------------------------------------------------------------------

state 27 contains 1 shift/reduce conflicts.

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_parse -> ASA                                (0)
	ASA -> nat                                         (1)
	ASA -> bool                                        (2)
	ASA -> '(' '+' Args ')'                            (3)
	ASA -> '(' '-' Args ')'                            (4)
	ASA -> '(' '*' Args ')'                            (5)
	ASA -> '(' '/' Args ')'                            (6)
	ASA -> '(' "and" Args ')'                          (7)
	ASA -> '(' "or" Args ')'                           (8)
	ASA -> '(' '<' Args ')'                            (9)
	ASA -> '(' '>' Args ')'                            (10)
	ASA -> '(' "<=" Args ')'                           (11)
	ASA -> '(' ">=" Args ')'                           (12)
	ASA -> '(' "expt" ASA ASA ')'                      (13)
	ASA -> '(' "eq" ASA ASA ')'                        (14)
	ASA -> '(' "not" ASA ')'                           (15)
	ASA -> '(' "add1" ASA ')'                          (16)
	ASA -> '(' "sub1" ASA ')'                          (17)
	ASA -> '(' "zero?" ASA ')'                         (18)
	ASA -> id                                          (19)
	ASA -> '(' "let" Bindings ASA ')'                  (20)
	ASA -> '(' "let*" Bindings ASA ')'                 (21)
	Args -> ASA ASA                                    (22)
	Args -> ASA Args                                   (23)
	id -> var                                          (24)
	Bindings -> Binding                                (25)
	Bindings -> Binding Bindings                       (26)
	Binding -> '(' var ASA ')'                         (27)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	var            { TokenId $$ }
	nat            { TokenNum $$ }
	bool           { TokenBool $$ }
	'+'            { TokenSuma }
	'-'            { TokenResta }
	'*'            { TokenMul }
	'/'            { TokenDiv }
	"and"          { TokenAnd }
	"or"           { TokenOr }
	"not"          { TokenNot }
	"add1"         { TokenAdd1 }
	"sub1"         { TokenSub1 }
	"zero?"        { TokenZeroP }
	"expt"         { TokenExpt }
	'<'            { TokenLT }
	'>'            { TokenGT }
	"<="           { TokenLE }
	">="           { TokenGE }
	"eq"           { TokenEq }
	"let"          { TokenLet }
	"let*"         { TokenLetStar }
	'('            { TokenPA }
	')'            { TokenPC }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_parse    rule  0
	ASA             rules 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21
	Args            rules 22, 23
	id              rule  24
	Bindings        rules 25, 26
	Binding         rule  27

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0

	%start_parse -> . ASA                               (rule 0)

	var            shift, and enter state 5
	nat            shift, and enter state 2
	bool           shift, and enter state 6
	'('            shift, and enter state 7

	ASA            goto state 3
	id             goto state 4

State 1

	ASA -> . nat                                        (rule 1)

	nat            shift, and enter state 2


State 2

	ASA -> nat .                                        (rule 1)

	var            reduce using rule 1
	nat            reduce using rule 1
	bool           reduce using rule 1
	'('            reduce using rule 1
	')'            reduce using rule 1
	%eof           reduce using rule 1


State 3

	%start_parse -> ASA .                               (rule 0)

	%eof           accept


State 4

	ASA -> id .                                         (rule 19)

	var            reduce using rule 19
	nat            reduce using rule 19
	bool           reduce using rule 19
	'('            reduce using rule 19
	')'            reduce using rule 19
	%eof           reduce using rule 19


State 5

	id -> var .                                         (rule 24)

	var            reduce using rule 24
	nat            reduce using rule 24
	bool           reduce using rule 24
	'('            reduce using rule 24
	')'            reduce using rule 24
	%eof           reduce using rule 24


State 6

	ASA -> bool .                                       (rule 2)

	var            reduce using rule 2
	nat            reduce using rule 2
	bool           reduce using rule 2
	'('            reduce using rule 2
	')'            reduce using rule 2
	%eof           reduce using rule 2


State 7

	ASA -> '(' . '+' Args ')'                           (rule 3)
	ASA -> '(' . '-' Args ')'                           (rule 4)
	ASA -> '(' . '*' Args ')'                           (rule 5)
	ASA -> '(' . '/' Args ')'                           (rule 6)
	ASA -> '(' . "and" Args ')'                         (rule 7)
	ASA -> '(' . "or" Args ')'                          (rule 8)
	ASA -> '(' . '<' Args ')'                           (rule 9)
	ASA -> '(' . '>' Args ')'                           (rule 10)
	ASA -> '(' . "<=" Args ')'                          (rule 11)
	ASA -> '(' . ">=" Args ')'                          (rule 12)
	ASA -> '(' . "expt" ASA ASA ')'                     (rule 13)
	ASA -> '(' . "eq" ASA ASA ')'                       (rule 14)
	ASA -> '(' . "not" ASA ')'                          (rule 15)
	ASA -> '(' . "add1" ASA ')'                         (rule 16)
	ASA -> '(' . "sub1" ASA ')'                         (rule 17)
	ASA -> '(' . "zero?" ASA ')'                        (rule 18)
	ASA -> '(' . "let" Bindings ASA ')'                 (rule 20)
	ASA -> '(' . "let*" Bindings ASA ')'                (rule 21)

	'+'            shift, and enter state 8
	'-'            shift, and enter state 9
	'*'            shift, and enter state 10
	'/'            shift, and enter state 11
	"and"          shift, and enter state 12
	"or"           shift, and enter state 13
	"not"          shift, and enter state 14
	"add1"         shift, and enter state 15
	"sub1"         shift, and enter state 16
	"zero?"        shift, and enter state 17
	"expt"         shift, and enter state 18
	'<'            shift, and enter state 19
	'>'            shift, and enter state 20
	"<="           shift, and enter state 21
	">="           shift, and enter state 22
	"eq"           shift, and enter state 23
	"let"          shift, and enter state 24
	"let*"         shift, and enter state 25


State 8

	ASA -> '(' '+' . Args ')'                           (rule 3)

	var            shift, and enter state 5
	nat            shift, and enter state 2
	bool           shift, and enter state 6
	'('            shift, and enter state 7

	ASA            goto state 31
	Args           goto state 46
	id             goto state 4

State 9

	ASA -> '(' '-' . Args ')'                           (rule 4)

	var            shift, and enter state 5
	nat            shift, and enter state 2
	bool           shift, and enter state 6
	'('            shift, and enter state 7

	ASA            goto state 31
	Args           goto state 45
	id             goto state 4

State 10

	ASA -> '(' '*' . Args ')'                           (rule 5)

	var            shift, and enter state 5
	nat            shift, and enter state 2
	bool           shift, and enter state 6
	'('            shift, and enter state 7

	ASA            goto state 31
	Args           goto state 44
	id             goto state 4

State 11

	ASA -> '(' '/' . Args ')'                           (rule 6)

	var            shift, and enter state 5
	nat            shift, and enter state 2
	bool           shift, and enter state 6
	'('            shift, and enter state 7

	ASA            goto state 31
	Args           goto state 43
	id             goto state 4

State 12

	ASA -> '(' "and" . Args ')'                         (rule 7)

	var            shift, and enter state 5
	nat            shift, and enter state 2
	bool           shift, and enter state 6
	'('            shift, and enter state 7

	ASA            goto state 31
	Args           goto state 42
	id             goto state 4

State 13

	ASA -> '(' "or" . Args ')'                          (rule 8)

	var            shift, and enter state 5
	nat            shift, and enter state 2
	bool           shift, and enter state 6
	'('            shift, and enter state 7

	ASA            goto state 31
	Args           goto state 41
	id             goto state 4

State 14

	ASA -> '(' "not" . ASA ')'                          (rule 15)

	var            shift, and enter state 5
	nat            shift, and enter state 2
	bool           shift, and enter state 6
	'('            shift, and enter state 7

	ASA            goto state 40
	id             goto state 4

State 15

	ASA -> '(' "add1" . ASA ')'                         (rule 16)

	var            shift, and enter state 5
	nat            shift, and enter state 2
	bool           shift, and enter state 6
	'('            shift, and enter state 7

	ASA            goto state 39
	id             goto state 4

State 16

	ASA -> '(' "sub1" . ASA ')'                         (rule 17)

	var            shift, and enter state 5
	nat            shift, and enter state 2
	bool           shift, and enter state 6
	'('            shift, and enter state 7

	ASA            goto state 38
	id             goto state 4

State 17

	ASA -> '(' "zero?" . ASA ')'                        (rule 18)

	var            shift, and enter state 5
	nat            shift, and enter state 2
	bool           shift, and enter state 6
	'('            shift, and enter state 7

	ASA            goto state 37
	id             goto state 4

State 18

	ASA -> '(' "expt" . ASA ASA ')'                     (rule 13)

	var            shift, and enter state 5
	nat            shift, and enter state 2
	bool           shift, and enter state 6
	'('            shift, and enter state 7

	ASA            goto state 36
	id             goto state 4

State 19

	ASA -> '(' '<' . Args ')'                           (rule 9)

	var            shift, and enter state 5
	nat            shift, and enter state 2
	bool           shift, and enter state 6
	'('            shift, and enter state 7

	ASA            goto state 31
	Args           goto state 35
	id             goto state 4

State 20

	ASA -> '(' '>' . Args ')'                           (rule 10)

	var            shift, and enter state 5
	nat            shift, and enter state 2
	bool           shift, and enter state 6
	'('            shift, and enter state 7

	ASA            goto state 31
	Args           goto state 34
	id             goto state 4

State 21

	ASA -> '(' "<=" . Args ')'                          (rule 11)

	var            shift, and enter state 5
	nat            shift, and enter state 2
	bool           shift, and enter state 6
	'('            shift, and enter state 7

	ASA            goto state 31
	Args           goto state 33
	id             goto state 4

State 22

	ASA -> '(' ">=" . Args ')'                          (rule 12)

	var            shift, and enter state 5
	nat            shift, and enter state 2
	bool           shift, and enter state 6
	'('            shift, and enter state 7

	ASA            goto state 31
	Args           goto state 32
	id             goto state 4

State 23

	ASA -> '(' "eq" . ASA ASA ')'                       (rule 14)

	var            shift, and enter state 5
	nat            shift, and enter state 2
	bool           shift, and enter state 6
	'('            shift, and enter state 7

	ASA            goto state 30
	id             goto state 4

State 24

	ASA -> '(' "let" . Bindings ASA ')'                 (rule 20)

	'('            shift, and enter state 28

	Bindings       goto state 29
	Binding        goto state 27

State 25

	ASA -> '(' "let*" . Bindings ASA ')'                (rule 21)

	'('            shift, and enter state 28

	Bindings       goto state 26
	Binding        goto state 27

State 26

	ASA -> '(' "let*" Bindings . ASA ')'                (rule 21)

	var            shift, and enter state 5
	nat            shift, and enter state 2
	bool           shift, and enter state 6
	'('            shift, and enter state 7

	ASA            goto state 68
	id             goto state 4

State 27

	Bindings -> Binding .                               (rule 25)
	Bindings -> Binding . Bindings                      (rule 26)

	var            reduce using rule 25
	nat            reduce using rule 25
	bool           reduce using rule 25
	'('            shift, and enter state 28
			(reduce using rule 25)


	Bindings       goto state 67
	Binding        goto state 27

State 28

	Binding -> '(' . var ASA ')'                        (rule 27)

	var            shift, and enter state 66


State 29

	ASA -> '(' "let" Bindings . ASA ')'                 (rule 20)

	var            shift, and enter state 5
	nat            shift, and enter state 2
	bool           shift, and enter state 6
	'('            shift, and enter state 7

	ASA            goto state 65
	id             goto state 4

State 30

	ASA -> '(' "eq" ASA . ASA ')'                       (rule 14)

	var            shift, and enter state 5
	nat            shift, and enter state 2
	bool           shift, and enter state 6
	'('            shift, and enter state 7

	ASA            goto state 64
	id             goto state 4

State 31

	Args -> ASA . ASA                                   (rule 22)
	Args -> ASA . Args                                  (rule 23)

	var            shift, and enter state 5
	nat            shift, and enter state 2
	bool           shift, and enter state 6
	'('            shift, and enter state 7

	ASA            goto state 62
	Args           goto state 63
	id             goto state 4

State 32

	ASA -> '(' ">=" Args . ')'                          (rule 12)

	')'            shift, and enter state 61


State 33

	ASA -> '(' "<=" Args . ')'                          (rule 11)

	')'            shift, and enter state 60


State 34

	ASA -> '(' '>' Args . ')'                           (rule 10)

	')'            shift, and enter state 59


State 35

	ASA -> '(' '<' Args . ')'                           (rule 9)

	')'            shift, and enter state 58


State 36

	ASA -> '(' "expt" ASA . ASA ')'                     (rule 13)

	var            shift, and enter state 5
	nat            shift, and enter state 2
	bool           shift, and enter state 6
	'('            shift, and enter state 7

	ASA            goto state 57
	id             goto state 4

State 37

	ASA -> '(' "zero?" ASA . ')'                        (rule 18)

	')'            shift, and enter state 56


State 38

	ASA -> '(' "sub1" ASA . ')'                         (rule 17)

	')'            shift, and enter state 55


State 39

	ASA -> '(' "add1" ASA . ')'                         (rule 16)

	')'            shift, and enter state 54


State 40

	ASA -> '(' "not" ASA . ')'                          (rule 15)

	')'            shift, and enter state 53


State 41

	ASA -> '(' "or" Args . ')'                          (rule 8)

	')'            shift, and enter state 52


State 42

	ASA -> '(' "and" Args . ')'                         (rule 7)

	')'            shift, and enter state 51


State 43

	ASA -> '(' '/' Args . ')'                           (rule 6)

	')'            shift, and enter state 50


State 44

	ASA -> '(' '*' Args . ')'                           (rule 5)

	')'            shift, and enter state 49


State 45

	ASA -> '(' '-' Args . ')'                           (rule 4)

	')'            shift, and enter state 48


State 46

	ASA -> '(' '+' Args . ')'                           (rule 3)

	')'            shift, and enter state 47


State 47

	ASA -> '(' '+' Args ')' .                           (rule 3)

	var            reduce using rule 3
	nat            reduce using rule 3
	bool           reduce using rule 3
	'('            reduce using rule 3
	')'            reduce using rule 3
	%eof           reduce using rule 3


State 48

	ASA -> '(' '-' Args ')' .                           (rule 4)

	var            reduce using rule 4
	nat            reduce using rule 4
	bool           reduce using rule 4
	'('            reduce using rule 4
	')'            reduce using rule 4
	%eof           reduce using rule 4


State 49

	ASA -> '(' '*' Args ')' .                           (rule 5)

	var            reduce using rule 5
	nat            reduce using rule 5
	bool           reduce using rule 5
	'('            reduce using rule 5
	')'            reduce using rule 5
	%eof           reduce using rule 5


State 50

	ASA -> '(' '/' Args ')' .                           (rule 6)

	var            reduce using rule 6
	nat            reduce using rule 6
	bool           reduce using rule 6
	'('            reduce using rule 6
	')'            reduce using rule 6
	%eof           reduce using rule 6


State 51

	ASA -> '(' "and" Args ')' .                         (rule 7)

	var            reduce using rule 7
	nat            reduce using rule 7
	bool           reduce using rule 7
	'('            reduce using rule 7
	')'            reduce using rule 7
	%eof           reduce using rule 7


State 52

	ASA -> '(' "or" Args ')' .                          (rule 8)

	var            reduce using rule 8
	nat            reduce using rule 8
	bool           reduce using rule 8
	'('            reduce using rule 8
	')'            reduce using rule 8
	%eof           reduce using rule 8


State 53

	ASA -> '(' "not" ASA ')' .                          (rule 15)

	var            reduce using rule 15
	nat            reduce using rule 15
	bool           reduce using rule 15
	'('            reduce using rule 15
	')'            reduce using rule 15
	%eof           reduce using rule 15


State 54

	ASA -> '(' "add1" ASA ')' .                         (rule 16)

	var            reduce using rule 16
	nat            reduce using rule 16
	bool           reduce using rule 16
	'('            reduce using rule 16
	')'            reduce using rule 16
	%eof           reduce using rule 16


State 55

	ASA -> '(' "sub1" ASA ')' .                         (rule 17)

	var            reduce using rule 17
	nat            reduce using rule 17
	bool           reduce using rule 17
	'('            reduce using rule 17
	')'            reduce using rule 17
	%eof           reduce using rule 17


State 56

	ASA -> '(' "zero?" ASA ')' .                        (rule 18)

	var            reduce using rule 18
	nat            reduce using rule 18
	bool           reduce using rule 18
	'('            reduce using rule 18
	')'            reduce using rule 18
	%eof           reduce using rule 18


State 57

	ASA -> '(' "expt" ASA ASA . ')'                     (rule 13)

	')'            shift, and enter state 73


State 58

	ASA -> '(' '<' Args ')' .                           (rule 9)

	var            reduce using rule 9
	nat            reduce using rule 9
	bool           reduce using rule 9
	'('            reduce using rule 9
	')'            reduce using rule 9
	%eof           reduce using rule 9


State 59

	ASA -> '(' '>' Args ')' .                           (rule 10)

	var            reduce using rule 10
	nat            reduce using rule 10
	bool           reduce using rule 10
	'('            reduce using rule 10
	')'            reduce using rule 10
	%eof           reduce using rule 10


State 60

	ASA -> '(' "<=" Args ')' .                          (rule 11)

	var            reduce using rule 11
	nat            reduce using rule 11
	bool           reduce using rule 11
	'('            reduce using rule 11
	')'            reduce using rule 11
	%eof           reduce using rule 11


State 61

	ASA -> '(' ">=" Args ')' .                          (rule 12)

	var            reduce using rule 12
	nat            reduce using rule 12
	bool           reduce using rule 12
	'('            reduce using rule 12
	')'            reduce using rule 12
	%eof           reduce using rule 12


State 62

	Args -> ASA . ASA                                   (rule 22)
	Args -> ASA ASA .                                   (rule 22)
	Args -> ASA . Args                                  (rule 23)

	var            shift, and enter state 5
	nat            shift, and enter state 2
	bool           shift, and enter state 6
	'('            shift, and enter state 7
	')'            reduce using rule 22

	ASA            goto state 62
	Args           goto state 63
	id             goto state 4

State 63

	Args -> ASA Args .                                  (rule 23)

	')'            reduce using rule 23


State 64

	ASA -> '(' "eq" ASA ASA . ')'                       (rule 14)

	')'            shift, and enter state 72


State 65

	ASA -> '(' "let" Bindings ASA . ')'                 (rule 20)

	')'            shift, and enter state 71


State 66

	Binding -> '(' var . ASA ')'                        (rule 27)

	var            shift, and enter state 5
	nat            shift, and enter state 2
	bool           shift, and enter state 6
	'('            shift, and enter state 7

	ASA            goto state 70
	id             goto state 4

State 67

	Bindings -> Binding Bindings .                      (rule 26)

	var            reduce using rule 26
	nat            reduce using rule 26
	bool           reduce using rule 26
	'('            reduce using rule 26


State 68

	ASA -> '(' "let*" Bindings ASA . ')'                (rule 21)

	')'            shift, and enter state 69


State 69

	ASA -> '(' "let*" Bindings ASA ')' .                (rule 21)

	var            reduce using rule 21
	nat            reduce using rule 21
	bool           reduce using rule 21
	'('            reduce using rule 21
	')'            reduce using rule 21
	%eof           reduce using rule 21


State 70

	Binding -> '(' var ASA . ')'                        (rule 27)

	')'            shift, and enter state 74


State 71

	ASA -> '(' "let" Bindings ASA ')' .                 (rule 20)

	var            reduce using rule 20
	nat            reduce using rule 20
	bool           reduce using rule 20
	'('            reduce using rule 20
	')'            reduce using rule 20
	%eof           reduce using rule 20


State 72

	ASA -> '(' "eq" ASA ASA ')' .                       (rule 14)

	var            reduce using rule 14
	nat            reduce using rule 14
	bool           reduce using rule 14
	'('            reduce using rule 14
	')'            reduce using rule 14
	%eof           reduce using rule 14


State 73

	ASA -> '(' "expt" ASA ASA ')' .                     (rule 13)

	var            reduce using rule 13
	nat            reduce using rule 13
	bool           reduce using rule 13
	'('            reduce using rule 13
	')'            reduce using rule 13
	%eof           reduce using rule 13


State 74

	Binding -> '(' var ASA ')' .                        (rule 27)

	var            reduce using rule 27
	nat            reduce using rule 27
	bool           reduce using rule 27
	'('            reduce using rule 27


-----------------------------------------------------------------------------
Grammar Totals
-----------------------------------------------------------------------------
Number of rules: 28
Number of terminals: 23
Number of non-terminals: 6
Number of states: 75
